--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
@@ -51,5 +50,9 @@
         "lines": 10
       }
     }
+  },
+  "devDependencies": {
+    "@testing-library/react": "^15.0.2",
+    "react-test-renderer": "^18.2.0"
   }
 }
