--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^11.2.5",
     "axios": "^1.7.0",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
@@ -23,8 +24,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\" --env=jsdom",
+    "eject": "react-scripts eject",
+    "clear_jest": "jest --clearCache"
   },
   "eslintConfig": {
     "extends": [
@@ -44,17 +46,11 @@
       "last 1 safari version"
     ]
   },
-
   "jest": {
     "coverageThreshold": {
       "global": {
         "lines": 19
       }
     }
-  },
-
-  "devDependencies": {
-    "@testing-library/react": "^15.0.2",
-    "react-test-renderer": "^18.2.0"
   }
 }
