--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\" --env=jsdom",
+    "test": "react-scripts test --coverage --transformIgnorePatterns \"node_modules/(?!axios)/\" --env=jsdom",
     "eject": "react-scripts eject",
     "clear_jest": "jest --clearCache"
   },
@@ -49,7 +49,7 @@
   "jest": {
     "coverageThreshold": {
       "global": {
-        "lines": 19
+        "lines": 40
       }
     }
   }
