--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage --transformIgnorePatterns \"node_modules/(?!axios)/\" --env=jsdom",
+    "test": "react-scripts test --coverage --silent --transformIgnorePatterns \"node_modules/(?!axios)/\" --env=jsdom",
     "eject": "react-scripts eject",
     "clear_jest": "jest --clearCache"
   },
